Fix legend dark mode color

--- a/resources/components/common.less
+++ b/resources/components/common.less
@@ -108,8 +108,8 @@ fieldset>table {
 legend {
     font-weight: bold;
     color: @base-20;
-    margin: 0 -@margin-side / 2;
-    padding: @margin-side / 2;
+    margin: 0;
+    padding: 4px;
 }
 
 textarea {
